x1244 add numStored to graphql location schema
Requires corresponding change in storelight