@@ -92,7 +92,7 @@ public class TestStoreMutations {
 
         List<Map<String, ?>> labwareListData = chainGet(result, "data", "labwareInLocation");
         assertThat(labwareListData).hasSize(1);
-        Map<String, ?> labwareData = labwareListData.get(0);
+        Map<String, ?> labwareData = labwareListData.getFirst();
         assertEquals("STAN-100", labwareData.get("barcode"));
         assertEquals(sample.getId(), chainGet(labwareData, "slots", 0, "samples", 0, "id"));
     }
@@ -205,6 +205,44 @@ public class TestStoreMutations {
         assertEquals("STO-5", chainGet(response, "data", "transfer", "barcode"));
 
         verifyStorelightQuery(mockStorelightClient, List.of("store", "STAN-100", "STAN-101", "STO-5"), user.getUsername());
+    }
+
+    @Transactional
+    @Test
+    public void testQueryLocation() throws Exception {
+        ObjectMapper objectMapper = new ObjectMapper();
+        ObjectNode locationNode = objectMapper.createObjectNode()
+                .put("barcode", "STO-A")
+                .put("name", "Alpha: Beta")
+                .putNull("address")
+                .put("numStored", 0)
+                .set("children", objectMapper.createArrayNode()
+                        .add(objectMapper.createObjectNode()
+                                .put("barcode", "STO-B")
+                                .put("name", "Gamma: Delta")
+                                .put("address", "B3")
+                                .put("numStored", 5))
+                );
+        GraphQLResponse graphQLResponse = new GraphQLResponse(
+                objectMapper.createObjectNode().set("location", locationNode), null
+        );
+        when(mockStorelightClient.postQuery(anyString(), any())).thenReturn(graphQLResponse);
+        Object response = tester.post("query { location(locationBarcode: \"STO-A\") { " +
+                "barcode fixedName customName address numStored " +
+                "children { barcode fixedName customName address numStored } } }");
+        Map<String, ?> loc = chainGet(response, "data", "location");
+        assertEquals("STO-A", loc.get("barcode"));
+        assertEquals("Alpha", loc.get("fixedName"));
+        assertEquals("Beta", loc.get("customName"));
+        assertNull(loc.get("address"));
+        assertEquals(0, loc.get("numStored"));
+        assertThat((List<?>) loc.get("children")).hasSize(1);
+        Map<String, ?> child = chainGet(loc, "children", 0);
+        assertEquals("STO-B", child.get("barcode"));
+        assertEquals("Gamma", child.get("fixedName"));
+        assertEquals("Delta", child.get("customName"));
+        assertEquals("B3", child.get("address"));
+        assertEquals(5, child.get("numStored"));
     }
 
     @Transactional
